--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <p>Presented by Professor Zumbi and Master Han</p>
                 <hr>
                 <h3 class="white-icons"> 
-                  <a href="mailto:freetrial@capoeirastudio.com"><i class="fa fa-check-circle-o"></i></a> DOWNLOAD FLIER
+                  <a href="https://s3-ap-northeast-1.amazonaws.com/www-capoeiratricking-com/%E1%84%8F%E1%85%A1%E1%84%91%E1%85%A9%E1%84%8B%E1%85%A6%E1%84%85%E1%85%A1-%E1%84%90%E1%85%B3%E1%84%85%E1%85%B5%E1%86%A8%E1%84%8F%E1%85%B5%E1%86%BC.pdf"><i class="fa fa-check-circle-o"></i></a> DOWNLOAD FLIER
 		</h3>
             </div>
         </div>
