refresh site with basic bells and whistles

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <!-- Plugin CSS -->
     <link rel="stylesheet" href="css/animate.min.css" type="text/css">
+    <link rel="stylesheet" href="css/vegas.min.css" type="text/css">
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/creative.css" type="text/css">
@@ -44,12 +45,21 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
+		<a href="#about" class="page-scroll">
+			<img class="header-logo wow bounceIn" data-wow-delay=".1s" src="img/capoeiratricking-logo-black-140x140px.png" style="visibility: visible; animation-delay: 0.1s; animation-name: bounceIn;">
+		</a>
                 <h1>Capoeira Tricking</h1>
                 <hr>
                 <p>Presented by Professor Zumbi and Master Han</p>
+                <h3>
+		        <a href="mailto:zumbi@capoeirastudio.com"><i class="social-email fa fa-envelope-o fa-2x"></i></a>
+		        <a href="http://facebook.com/capoeiratricking"><i class="social-facebook fa fa-facebook fa-2x"></i></a>
+		        <a href="http://youtube.com/capoeiratricking"><i class="social-youtube fa fa-youtube fa-2x"></i></a>
+		        <a href="http://twitter.com/munair"><i class="social-twitter fa fa-twitter fa-2x"></i></a>
+		</h2>
                 <hr>
                 <h3 class="white-icons"> 
-                  <a href="https://s3-ap-northeast-1.amazonaws.com/www-capoeiratricking-com/%E1%84%8F%E1%85%A1%E1%84%91%E1%85%A9%E1%84%8B%E1%85%A6%E1%84%85%E1%85%A1-%E1%84%90%E1%85%B3%E1%84%85%E1%85%B5%E1%86%A8%E1%84%8F%E1%85%B5%E1%86%BC.pdf"><i class="fa fa-check-circle-o"></i></a> DOWNLOAD FLIER
+                  <a href="capoeiratricking-poster.pdf"><i class="download-icon fa fa-check-circle-o"></i></a> DOWNLOAD FLIER
 		</h3>
             </div>
         </div>
@@ -65,9 +75,12 @@
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/jquery.fittext.js"></script>
     <script src="js/wow.min.js"></script>
+    <script src="js/vegas.min.js"></script>
+    <script src="js/ion.sound.js"></script>
 
     <!-- Custom Theme JavaScript -->
     <script src="js/creative.js"></script>
+    <script src="js/capoeiratricking.js"></script>
 
 </body>
 
