--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <!-- Custom Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" type="text/css">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
     <!-- Plugin CSS -->
     <link rel="stylesheet" href="css/animate.min.css" type="text/css">
@@ -59,7 +58,7 @@
 		</h2>
                 <hr>
                 <h3 class="white-icons"> 
-                  <a href="https://s3-ap-northeast-1.amazonaws.com/www-capoeiratricking-com/카포에라-트릭킹.pdf"><i class="download-icon fa fa-check-circle-o"></i></a> DOWNLOAD FLIER
+                  <a href="https://s3-ap-northeast-1.amazonaws.com/www-capoeiratricking-com/카포에라-트릭킹.pdf"><i class="download-icon fa fa-download"></i></a> DOWNLOAD FLIER
 		</h3>
             </div>
         </div>
