update open graph tags

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <meta name="description" content="Creative Movement. Serious Fitness.">
     <meta name="author" content="Quilombola Engineering">
 
+    <meta property="og:title" content="Capoeira Tricking" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://www.capoeiratricking.com/" />
+    <meta property="og:image" content="http://www.capoeiratricking.com/img/hansabu-freeze-2600x2250px.png" />
+    <meta property="og:image" content="http://www.capoeiratricking.com/img/capoeiratricking-logo-300x300px.png" />
+
+
     <title>Capoeira Tricking</title>
 
     <!-- Bootstrap Core CSS -->
