--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 		</h2>
                 <hr>
                 <h3 class="white-icons"> 
-                  <p><a href="https://s3-ap-northeast-1.amazonaws.com/www-capoeiratricking-com/%E1%84%8F%E1%85%A1%E1%84%91%E1%85%A9%E1%84%8B%E1%85%A6%E1%84%85%E1%85%A1-%E1%84%90%E1%85%B3%E1%84%85%E1%85%B5%E1%86%A8%E1%84%8F%E1%85%B5%E1%86%BC.pdf"><i class="download-icon fa fa-download"></i></a> DOWNLOAD FLIER [<a href="https://s3-ap-northeast-1.amazonaws.com/www-capoeiratricking-com/%E1%84%8F%E1%85%A1%E1%84%91%E1%85%A9%E1%84%8B%E1%85%A6%E1%84%85%E1%85%A1-%E1%84%90%E1%85%B3%E1%84%85%E1%85%B5%E1%86%A8%E1%84%8F%E1%85%B5%E1%86%BC.pdf">한국어</a> <a href="http://www.capoeiratricking.com/capoeiratricking-poster.pdf">ENG</a>]<br>
-                     <a href="http://www.hansabu.com"><i class="check-icon fa fa-check-circle-o"></i></a> REGISTER HERE [<a href="http://www.hansabu.com/">한국어</a> | <a href="http://www.capoeirastudio.com/">ENG</a>]</p>
+                  <p><a href="https://s3-ap-northeast-1.amazonaws.com/www-capoeiratricking-com/%E1%84%8F%E1%85%A1%E1%84%91%E1%85%A9%E1%84%8B%E1%85%A6%E1%84%85%E1%85%A1-%E1%84%90%E1%85%B3%E1%84%85%E1%85%B5%E1%86%A8%E1%84%8F%E1%85%B5%E1%86%BC.pdf"><i class="download-icon fa fa-download"></i></a> DOWNLOAD FLIER <a href="https://s3-ap-northeast-1.amazonaws.com/www-capoeiratricking-com/%E1%84%8F%E1%85%A1%E1%84%91%E1%85%A9%E1%84%8B%E1%85%A6%E1%84%85%E1%85%A1-%E1%84%90%E1%85%B3%E1%84%85%E1%85%B5%E1%86%A8%E1%84%8F%E1%85%B5%E1%86%BC.pdf">한국어</a> [<a href="http://www.capoeiratricking.com/capoeiratricking-poster.pdf">ENG</a>]<br>
+                     <a href="http://www.hansabu.com"><i class="check-icon fa fa-check-circle-o"></i></a> REGISTER HERE <a href="http://www.hansabu.com/">한국어</a> [<a href="http://www.capoeirastudio.com/">ENG</a>]</p>
 		</h3>
             </div>
         </div>
